feat: list usernames in lobby info
